<resources>
    <string name="app_name">万才招聘</string>
    <string name="home_name">万才招聘</string>
    <string name="menu_home">首页</string>
    <string name="menu_job_favorite">职位收藏夹</string>
    <string name="menu_job_apply">我的职位申请</string>
    <string name="item5">更多设置</string>
    <string name="item6">意见反馈</string>
    <string name="item7">常见问题</string>
    <string name="user_name">用户名</string>
    <string name="user_pwd">密码</string>
    <string name="no_title">没标题</string>
    <string name="tab_name">首页</string>
    <string name="tab_cv">简历</string>
    <string name="tab_find">发现</string>
    <string name="action_add">创建简历</string>
    <string name="action_news">消息</string>
    <string name="action_search">搜索</string>
    <string name="btn_login">登陆</string>
    <string name="tv_register">现在注册</string>
    <string name="network_err">网络异常，请检查网络</string>
    <string name="edit_phone">请输入手机号码</string>
    <string name="edit_validate_code">请输入验证码</string>
    <string name="title_forgot_pwd">忘记密码</string>
    <string name="title_login">登陆</string>
    <string name="btn_get_code">获取验证码</string>
    <string name="btn_submit_code">验证</string>
    <string name="reset_pwd">请输入新密码</string>
    <string name="reset_pwd_again">请再输入一次</string>
    <string name="btn_submit_new_pwd">确认修改</string>
    <string name="title_reset_new_pwd">重置密码</string>
    <string name="tv_reg_username">用户名</string>
    <string name="et_reg_username_hint">请输入用户名</string>
    <string name="tv_reg_email">邮箱</string>
    <string name="et_reg_email_hint">请输入常用邮箱</string>
    <string name="tv_reg_pwd">密码</string>
    <string name="et_reg_pwd_hint">请输入密码</string>
    <string name="tv_reg_pwd_again">确认密码</string>
    <string name="et_reg_pwd_again_hint">请再输入一遍密码</string>
    <string name="title_register">注册</string>
    <string name="item_head">头像</string>
    <string name="item_choose">＞</string>
    <string name="item_name">姓名</string>
    <string name="item_mobile">手机号码</string>
    <string name="title_user_info">个人信息</string>
    <string name="user_info_save">保存</string>
    <string name="title_job_info">职位详情</string>
    <string name="job_info_add_favorite_job">收藏</string>
    <string name="title_company_info">公司详情</string>
    <string name="search_hint">搜索...</string>
    <string name="other_transition_name">transition_reveal</string>
    <string name="preview_resume">预览</string>
    <string name="title_create_resume">创建简历</string>
    <string name="title_education">教育经历</string>
    <string name="title_work_experience">工作经历</string>
    <string name="title_job_objective">求职意向</string>
    <string name="title_language_ability">语言能力</string>
    <string name="title_train_experience">培训经历</string>
    <string name="job_objective_et_hint">自我评价(100-300字)</string>
    <string name="work_experience_et_hint">工作描述(100-300字)</string>
    <string name="train_experience_et_hint">详细描述(100-300字)</string>
    <string name="title_job_favorite">职位收藏</string>
    <string name="title_job_apply">职位申请</string>
    <string name="warm_job_apply">系统将自动删除2个月以上的职位申请记录</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="company_name">公司名称</string>
    <string name="company_nature">公司性质</string>
    <string name="company_industry">所属行业</string>
    <string name="sub_function">担任职位</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="marriage">婚姻状况</string>
    <string name="birthday">出生日期</string>
    <string name="degree">最高学历</string>
    <string name="polictical_status">政治面貌</string>
    <string name="location">现居地</string>
    <string name="work_year">工作年限</string>
    <string name="mobile">手机号码</string>
    <string name="email">邮箱</string>
    <string name="train_org">培训机构名称</string>
    <string name="class_name">培训课程</string>

    <string name="namespace">http://tempuri.org/</string>
    <string name="wsdl_login_and_registe">http://58.215.179.167/LoginAndRegiste.asmx?WSDL</string>
    <string name="method_login">MyLogin</string>
    <string name="result_login">MyLoginResult</string>
    <string name="method_register">UserRegister</string>
    <string name="result_register">UserRegisterResult</string>


</resources>
