<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/menu_job_favorite"
            android:title="@string/menu_job_favorite"
            />
        <item
            android:id="@+id/menu_job_apply"
            android:title="@string/menu_job_apply"
            />

        <item android:title="其他">
            <menu>
                <item
                    android:id="@+id/menu_item_5"
                    android:title="@string/item5"
                    />

                <item
                    android:id="@+id/menu_item_6"
                    android:title="@string/item6"
                    />

                <item
                    android:id="@+id/menu_item_7"
                    android:title="@string/item7"
                    />
            </menu>
        </item>

    </group>
</menu>